--- a/browser-service/package.json
+++ b/browser-service/package.json
@@ -4,6 +4,7 @@
   "description": "Browser service for Zealy social scraping",
   "main": "server.js",
   "scripts": {
+    "build": "echo 'Build completed'",
     "start": "node server.js",
     "dev": "node server.js"
   },
