--- a/browser-service/railway.toml
+++ b/browser-service/railway.toml
@@ -2,4 +2,6 @@
 builder = "dockerfile"
 
 [deploy]
-restartPolicyType = "on_failure" 
+restartPolicyType = "on_failure"
+healthcheckPath = "/health"
+healthcheckTimeout = 300 
